test/errors/future_annotations_unparse_invalid_expressions.py
from __future__ import annotations

e00: x := 1
e01: yield 1
e02: yield from x
e03: x += 1
e04: x -= 1
e05: x *= 1
e06: x @= 1
e07: x /= 1
e08: x //= 1
e09: x %= 1
e10: x **= 1
e11: x <<= 1
e12: x >>= 1
e13: x &= 1
e14: x ^= 1
e15: x |= 1
